--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,7 @@
   background-color: var(--primary);
   border-radius: 0.6rem;
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  transition-duration: 0.5s;
   }
   
   .hero .content .cta:hover,
@@ -480,6 +481,7 @@
     background-color: var(--primary);
     cursor: pointer;
     border-radius: 6px;
+    transition-duration: 0.5s;
   }
   
   .daftar .button {
